--- a/public/css/_reset.scss
+++ b/public/css/_reset.scss
@@ -131,3 +131,33 @@ i {
         display: none;
     }
 }
+
+.scroll-top {
+    a {
+        position: fixed;
+        bottom: 3.2rem;
+        right: 3.2rem;
+        background: $green-button;
+        color: $white;
+        border-radius: 50%;
+        padding: 1rem;
+        cursor: pointer;
+
+        @include media(425px)  {
+            padding: .8rem 1rem;
+            bottom: 2rem;
+            right: 2rem;
+            i {
+                font-size: 14px;
+            }
+        }
+    }
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+
+    &.ativo {
+        opacity: 1;
+        visibility: visible;
+    }
+}
